force-app/main/default/objects/Kinetic_Form_Answer__c/Kinetic_Form_Answer__c.object-meta.xml
<CustomObject>
    <label>Template Answer</label>
    <nameField>
        <displayFormat>KFA-{0000000}</displayFormat>
        <label>Template Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>