force-app/main/default/objects/Kinetic_Form_Answer__c/fields/AI_Guidance__c.field-meta.xml
<CustomField>
    <fullName>AI_Guidance__c</fullName>
    <label>AI Guidance</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>