force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Answer_Index__c.field-meta.xml
<CustomField>
    <fullName>Answer_Index__c</fullName>
    <label>Answer Index</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>