force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Attachment_Ids__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Ids__c</fullName>
    <label>Attachment Ids</label>
    <type>TextArea</type>
</CustomField>