force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Custom_Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Answer_Number__c</fullName>
    <label>Custom Answer Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>