force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Dependent_Flows__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Flows__c</fullName>
    <description>Flows that are invoked based on the answers</description>
    <inlineHelpText>Flows that are invoked based on the answers</inlineHelpText>
    <label>Dependent Flows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>