force-app/main/default/objects/Kinetic_Form_Answer__c/fields/File_Ids__c.field-meta.xml
<CustomField>
    <fullName>File_Ids__c</fullName>
    <label>File Ids</label>
    <type>TextArea</type>
</CustomField>