force-app/main/default/objects/Kinetic_Form_Answer__c/fields/has_Multiple_Attachments__c.field-meta.xml
<CustomField>
    <fullName>has_Multiple_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has Multiple Attachments</label>
    <type>Checkbox</type>
</CustomField>