force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Is_Uploaded_Image__c.field-meta.xml
<CustomField>
    <fullName>Is_Uploaded_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Uploaded Image</label>
    <type>Checkbox</type>
</CustomField>