force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Kinetic_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kinetic Form Question</label>
    <referenceTo>Kinetic_Form_Question__c</referenceTo>
    <relationshipName>Kinetic_Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>