force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Kinetic_Question__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>