force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Kinetic_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Question_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to kinetic Question for which this answer is captured</description>
    <inlineHelpText>Link to kinetic Question for which this answer is captured</inlineHelpText>
    <label>Kinetic Question Id</label>
    <referenceTo>Kinetic_Question__c</referenceTo>
    <relationshipName>Kinetic_Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>