force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Kinetic_Question_Values__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Question_Values__c</fullName>
    <label>Kinetic Question Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>