force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Out_of_Score__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Score__c</fullName>
    <label>Out of Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>