force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Parent_Kinetic_Form_Answer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Kinetic_Form_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Kinetic Form Answer</label>
    <referenceTo>Kinetic_Form_Answer__c</referenceTo>
    <relationshipName>Kinetic_Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>