force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Photo_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Photo_Attachment__c</fullName>
    <formula>IF(NOT(ISBLANK(Attachment_URL__c)) , HYPERLINK(Attachment_URL__c, &apos;View&apos;, &apos;_blank&apos;) ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo Attachment</label>
    <type>Text</type>
</CustomField>