force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Photo_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Photo_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo Not Required</label>
    <type>Checkbox</type>
</CustomField>