force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IF( AND(NOT(ISBLANK(Attachment_URL__c)),Attachment__c) , HYPERLINK(Attachment_URL__c, IMAGE( Attachment_URL__c , &apos;Image&apos;,30,60), &apos;_blank&apos;) , IF(has_Multiple_Attachments__c,HYPERLINK(&apos;/apex/DisplayTaskSurAnsAttachments?id=&apos;+Id, &apos;View Images&apos;,&apos;_blank&apos;),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>