force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Required_Parent_Value__c.field-meta.xml
<CustomField>
    <fullName>Required_Parent_Value__c</fullName>
    <description>Store Parent Triggering Answer Value, like whatever value is required to be selected on parent question to show the child question</description>
    <inlineHelpText>Store Parent Triggering Answer Value, like whatever value is required to be selected on parent question to show the child question</inlineHelpText>
    <label>Required Parent Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>