force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF(OR(ISNULL( Out_of_Score__c ), Out_of_Score__c=0), &quot;&quot;, TEXT(IF( ISNULL( Score_Attained__c ), 0, Score_Attained__c)) + &quot;/&quot; + TEXT(IF(ISNULL( Out_of_Score__c ), 0, Out_of_Score__c)))</formula>
    <label>Score</label>
    <type>Text</type>
</CustomField>