force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Score_Attained__c.field-meta.xml
<CustomField>
    <fullName>Score_Attained__c</fullName>
    <label>Score Attained</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>