force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Show_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Show_More_Information__c</fullName>
    <description>Show extra information</description>
    <label>Show More Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>