force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>Survey_Invitation__c</referenceTo>
    <relationshipName>Kinetic_Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>