force-app/main/default/objects/Kinetic_Form_Answer__c/fields/Template_Question_UID__c.field-meta.xml
<CustomField>
    <fullName>Template_Question_UID__c</fullName>
    <description>Unique Id used to identify question related to Template</description>
    <inlineHelpText>Unique Id used to identify question related to Template</inlineHelpText>
    <label>Template Question UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>